# Stopwatch

./: .gitignore  README.md  basic_stopwatch.py  exceptions.py  setup.cfg  stopwatch.py  timer.py
src/: basic_stopwatch.py  stopwatch.py
stopwatch/: __init__.py  exceptions.py  stopwatch.py
tests/: test_basic_stopwatch.py  test_stopwatch.py
