[metadata]
name = stopwatch
version = 1.0
author = Shneor Elmaleh
description = A Stopwatch for timing blocks of code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shner-elmo/Stopwatch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating Systime :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_packages_data = True

